--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.1.1",
+    "naive-ui": "^2.30.8",
     "prettier": "^2.7.1",
     "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.53.0",
     "unocss": "^0.42.0",
+    "unplugin-vue-components": "^0.20.1",
     "vite": "^2.9.9",
     "vite-plugin-html": "2",
     "vite-plugin-vue-setup-extend": "^0.4.0"
