--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint:fix": "eslint --fix --ext .js,.vue ."
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "axios": "^0.27.2",
+    "pinia": "^2.0.14",
+    "vue": "^3.2.25",
+    "vue-router": "^4.1.0"
   },
   "devDependencies": {
     "@unocss/preset-attributify": "^0.42.0",
@@ -21,6 +24,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.1.1",
+    "mockjs": "^1.1.0",
     "naive-ui": "^2.30.8",
     "prettier": "^2.7.1",
     "rollup-plugin-visualizer": "^5.6.0",
@@ -29,6 +33,7 @@
     "unplugin-vue-components": "^0.20.1",
     "vite": "^2.9.9",
     "vite-plugin-html": "2",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-vue-setup-extend": "^0.4.0"
   }
 }
